# french-tax-mcp

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_TASKS.md  fix_linting.py  improved_markitdown_scraper.py  markitdown_scraper.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
french_tax_mcp/: __init__.py  constants.py  helpers.py  report_generator.py  server.py
french_tax_mcp/analyzers/: business_analyzer.py  income_analyzer.py  property_analyzer.py
french_tax_mcp/scrapers/: base_scraper.py  impots_scraper.py  legal_scraper.py  service_public_scraper.py
french_tax_mcp/static/templates/: report_template.py
scripts/: direct_query.py  generate_report.py  query_scheme_details.py  run_server.py  test_client.py
tests/: conftest.py  test_all_tools.py  test_all_tools_simple.py  test_analyzers.py  test_cached_info.py  test_form_details.py  test_generate_report.py  test_integration.py  test_lmnp.py  test_mcp_client.py  test_multiple_queries.py  test_report_generator.py  test_scheme_details.py  test_scrapers.py  test_streamable_http.py  test_tax_brackets.py  test_tax_info.py
